2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/document.cpp:
	
	  use proper unref function on SPRoot to avoid appearance of leak

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/gc-anchored.cpp, src/xml/simple-node.cpp, src/sp-object.cpp:

	  switch everyone to simpler debug event API

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/Makefile_insert, src/gc-finalized.cpp, src/gc-finalized.h:

	  add finalizer logging

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/debug/simple-event.h: simplify the SimpleEvent API more

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/debug/simple-event.h: make Debug::SimpleEvent more convenient

	* src/debug/event.h, src/debug/logger.cpp: add FINALIZERS category

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/debug/logger.cpp:
	
	finish interrupted refactoring of log filter configuration

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/doc/Makefile.am, src/doc/refcounting.txt:
	
	  some developer documentation about refcounting

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/ui/view/view.cpp:

	  Wait a minute -- UI::View::View and SPDocument are both managed
	  by the collector -- the view doesn't need to ref the document!

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/ui/view/view.cpp: add missing unref

2006-04-29  MenTaLguY  <mental@rydia.net>

	* src/gc-anchored.cpp, src/gc-anchored.h:

	  added refcount logging to GC::Anchored

	* src/util/Makefile_insert, src/util/format.h:

	  shared string printf

2006-04-28  MenTaLguY  <mental@rydia.net>

    * src/sp-object.cpp: make refcount logging a little more useful
	  by including the relevent class name

2006-04-28  Jon A. Cruz  <jon@joncruz.org>

	* src/Makefile_insert, src/Makefile.am, src/dir-util-test.h,
	  src/dir-util-test.cpp, src/extract-uri-test.h,
	  src/extract-uri-test.cpp:
	  Replaced two tests with CxxTest versions.

2006-04-28  Jon A. Cruz  <jon@joncruz.org>

	* src/Makefile_insert, src/MultiPrinter.h, src/verbs.h,
	  src/verbs-test.h: